# CineMatch-AI

./: .dockerignore  .env.example  .gitignore  .vercelignore  CLAUDE.md  Caddyfile  Dockerfile  Dockerfile.full  Dockerfile.lightweight  Makefile  PLAN.md  PLAN2.md  PLAN3.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  render.yaml  requirements-lightweight.txt  requirements.txt  vercel.json
.claude/agents/: api-tester.md  build-error-resolver.md  codebase-researcher.md  data-pipeline.md  db-migration-reviewer.md  doc-fetcher.md  post-change.md  pre-change.md  security-reviewer.md  test-runner.md
.github/workflows/: precompute.yml  security.yml
api/: index.py
docker/postgres/: init-ssl-and-user.sh
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
scripts/: download_data.py  precompute_recommendations.py  seed_db.py  train_models.py
src/cinematch/: __init__.py  config.py  main.py
tests/: conftest.py  test_lightweight_mode_startup.py
tests/test_api/: conftest.py  test_achievements.py  test_advanced_search.py  test_audit_endpoint.py  test_auth.py  test_auth_deps.py  test_auth_enforcement.py  test_autocomplete.py  test_bingo.py  test_blind_spots.py  test_cast_combination.py  test_challenges.py  test_controversial.py  test_db_security.py  test_dep_scan.py  test_dismissals.py  test_docs_debug.py  test_feed.py  test_global_stats.py  test_import_export.py  test_input_validation_hardening.py  test_lists.py  (+18 more)
(+309 files in other folders)
